--- a/diagnostics/src/components/header/header.css
+++ b/diagnostics/src/components/header/header.css
@@ -1,132 +1,110 @@
-    /*Desktop View*/
 .header {
-    display: flex;
-    background:rgb(21, 21, 21);
-    justify-content: space-between;
-    align-items: center;
-    padding: 0px 40px;
-    height: 80px;
+  display: flex;
+  background:#327892;
+  padding: 0px 40px;
+  height: 80px;
+  width: 100%;
+  position: fixed;
+  left: 0;
+  top:0;
+  z-index: 999;
+  justify-content: space-between;
+}
+.hamburger-react{
+  display: none;
+}
+.logo-nav {
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+}
+
+.nav-options {
+  padding-left: 25px;
+  display: grid;
+  grid-template-columns: repeat(3, auto);
+  grid-gap: 50px;
+  list-style-type: none;
+}
+.mobile-option {
+  display: none;
+}
+
+.nav-list :active {
+  color: white;
+}
+
+.nav-list {
+  padding-right: 50px;
+  align-self: center;
+}
+.nav-list a{
+  color: white;
+  text-decoration: none;
+  font-size: larger;
+  font-weight: bold
+}
+.nav-list:hover{
+  -ms-transform: scale(1.2); /* IE 9 */
+  -webkit-transform: scale(1.2); /* Safari 3-8 */
+  transform: scale(1.2);
+  text-decoration: none;
+}
+
+.mobile-menu {
+  display: none;
+}
+@media (max-width: 648px) {
+  /*Mobile View */
+  .header {
+    padding: 0px 10px;
+  }
+  .nav-list:last-child{
+    padding-bottom: 10px;
   }
   .hamburger-react{
-    display: none;
+    display: block;
+    color:white;
+    margin-top: 10px;
   }
-  .logo-nav {
-    display: flex;
-    align-items: center;
-    justify-content: space-evenly;
+
+  .logo {
+    width:50%;
   }
-  .logo-container {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-  }
-  
   .nav-options {
-    padding-left: 25px;
-    display: grid;
-    grid-template-columns: repeat(3, auto);
-    grid-gap: 50px;
-    list-style-type: none;
-  }
-  .mobile-option {
-    display: none;
-  }
-  
-  .sign-in :active {
-    color: white;
-  }
-  .signin-up {
     display: flex;
-    padding: 0px 5px;
+    width: 100%;
+    height: 200px;
+    position: absolute;
+    top: 60px;
+    left: -100%;
+    opacity: 0;
+    transition: all 0.5s ease;
+    flex-direction: column;
     list-style-type: none;
+    grid-gap: 30px;
   }
-  .sign-in {
-    padding-right: 50px;
-    align-self: center;
-  }
-  .sign-in a{
-    color: white;
-    text-decoration: none;
-    font-size: larger;
-  }
-  .sign-in:hover{
-    -ms-transform: scale(1.2); /* IE 9 */
-    -webkit-transform: scale(1.2); /* Safari 3-8 */
-    transform: scale(1.2);
-    text-decoration: none;
+  .nav-options.active {
+    left: 0;
+  background: #00b100;
+  opacity: 1;
+  transition: all 0.5s ease;
+  z-index: 1;
+  align-content: center;
+  padding-left: 0px;
+  height: auto;
+  padding-top: 20px;
   }
   
-  .signup-btn {
-    padding: 10px 10px;
-    height: 2.4rem;
-    border-radius: 3px;
+  .nav-list {
     background: rgb(222, 9, 241);
+    border-radius: 3px;
     color: white;
-    cursor: pointer;
-    align-items: center;
+    padding: 20px 0px;
+    width: 80%;
+    align-self: center;
+    border-radius: 3px;
   }
-  .mobile-menu {
-    display: none;
-  }
-  @media (max-width: 648px) {
-    /*Mobile View */
-    .header {
-      padding: 0px 10px;
-    }
-    .hamburger-react{
-      display: block;
-      color:white;
-    }
+
   
-    .logo {
-      width:50%;
-    }
-    .nav-options {
-      display: flex;
-      width: 100%;
-      height: 200px;
-      position: absolute;
-      top: 60px;
-      left: -100%;
-      opacity: 0;
-      transition: all 0.5s ease;
-      flex-direction: column;
-      list-style-type: none;
-      grid-gap: 30px;
-    }
-    .nav-options.active {
-      background: grey;
-      left: 0;
-      opacity: 1;
-      transition: all 0.5s ease;
-      z-index: 1;
-      align-content: center;
-      padding-left: 0px;
-    }
-  
-    .menu-icon {
-      width: 45px;
-      height: 45px;
-    }
-    .option {
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      height: 10vw;
-      padding: 30px 0px;
-    }
-    .sign-up {
-      background: rgb(222, 9, 241);
-      border-radius: 3px;
-      color: white;
-      padding: 20px 0px;
-      width: 80%;
-      align-self: center;
-      border-radius: 3px;
-    }
-  
-    .signin-up {
-      display: none;
-    }
-  }
-  
+}
