--- a/diagnostics/src/components/header/header.css
+++ b/diagnostics/src/components/header/header.css
@@ -1,3 +1,6 @@
+
+    
+/*Desktop View*/
 .header {
   display: flex;
   background:#327892;
@@ -86,7 +89,7 @@
   }
   .nav-options.active {
     left: 0;
-  background: #00b100;
+  background: #327892;
   opacity: 1;
   transition: all 0.5s ease;
   z-index: 1;
@@ -95,16 +98,16 @@
   height: auto;
   padding-top: 20px;
   }
-  
-  .nav-list {
-    background: rgb(222, 9, 241);
-    border-radius: 3px;
-    color: white;
-    padding: 20px 0px;
-    width: 80%;
-    align-self: center;
-    border-radius: 3px;
-  }
 
-  
+  .menu-icon {
+    width: 45px;
+    height: 45px;
+  }
+  .option {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 10vw;
+    padding: 30px 0px;
+  }
 }
